fix: default button focus removed and sidebar button display on mobile screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,14 @@
   html {
     @apply scroll-smooth
   }
+  button,
+  input[type=button] {
+    outline: none;
+  }
+  button::-moz-focus-inner,
+  input[type=button]::-moz-focus-inner {
+    border: 0;
+  }
   :root {
     /* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1024,20,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
   --navbar-height: 4rem;
